--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">HOME</a></li>
+        <li class="active"><a href="/">主页</a></li>
         <li ><a href="/blog/">BLOG</a></li>
         <li ><a href="/portfolio/">PORTFOLIO</a></li>
         <li ><a href="/about/">ABOUT</a></li>
