--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">主页</a></li>
-        <li ><a href="/blog/">BLOG</a></li>
-        <li ><a href="/portfolio/">PORTFOLIO</a></li>
-        <li ><a href="/about/">ABOUT</a></li>
-        <li ><a href="/contact/">CONTACT</a></li>   
+        <li class="active"><a href="/">首页</a></li>
+        <li ><a href="/blog/">项目特色</a></li>
+        <li ><a href="/portfolio/">功能展示</a></li>
+        <li ><a href="/about/">数据集</a></li>
+        <li ><a href="/contact/">研究成果</a></li> 
+        <li ><a href="/contact/">联系我们</a></li>     
       </ul>
     </div><!--/.nav-collapse -->
   </div>
@@ -67,9 +68,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h3>欢迎访问数字音视频技术研究中心</h3>
-                <h1>Eyecatching Bootstrap 3 Theme.</h1>
-                <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
-                <h5>More Lorem Ipsum added here too.</h5>				
+                <h1>欢迎访问数字音视频技术研究中心</h1>
+                <h5>欢迎访问数字音视频技术研究中心</h5>
+                <h5>欢迎访问数字音视频技术研究中心</h5>				
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
                 <img src="/assets/img/browser.png" class="img-responsive">
