--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">SOLID.</a>
+      <a class="navbar-brand" href="/">太原理工大学</a>
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
@@ -69,11 +69,10 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h3>欢迎访问数字音视频技术研究中心</h3>
                 <h1>欢迎访问数字音视频技术研究中心</h1>
-                <h5>欢迎访问数字音视频技术研究中心</h5>
-                <h5>欢迎访问数字音视频技术研究中心</h5>				
+                <h5>欢迎访问数字音视频技术研究中心</h5>			
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
-                <img src="/assets/img/browser.png" class="img-responsive">
+                <img src="/assets/img/browser.jpg" class="img-responsive">
             </div>
         </div><!-- /row -->
     </div> <!-- /container -->
