--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">首页</a></li>
-        <li ><a href="/blog/">项目特色</a></li>
+        <li ><a href="/blog/" style="font-size: 30px;">项目特色</a></li>
         <li ><a href="/portfolio/">功能展示</a></li>
         <li ><a href="/about/">数据集</a></li>
         <li ><a href="/contact/">研究成果</a></li> 
