--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">太原理工大学</a>
+      <a class="navbar-brand" style="font-size: 30px;" href="https://www.tyut.edu.cn/">太原理工大学</a>
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">首页</a></li>
-        <li ><a href="/blog/" style="font-size: 30px;">项目特色</a></li>
-        <li ><a href="/portfolio/">功能展示</a></li>
-        <li ><a href="/about/">数据集</a></li>
-        <li ><a href="/contact/">研究成果</a></li> 
-        <li ><a href="/contact/">联系我们</a></li>     
+        <li ><a href="/blog/" style="font-size: 25px;">项目特色</a></li>
+        <li ><a href="/portfolio/" style="font-size: 25px;">功能展示</a></li>
+        <li ><a href="/about/" style="font-size: 25px;">数据集</a></li>
+        <li ><a href="/contact/" style="font-size: 25px;">研究成果</a></li> 
+        <li ><a href="/contact/" style="font-size: 25px;">联系我们</a></li>     
       </ul>
     </div><!--/.nav-collapse -->
   </div>
